# smcsmc

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  Dockerfile  Doxyfile  Makefile.am  README  README.md  arg.tex  article.bib  bootstrap  bootstrap.sh  circle.yml  configure.ac  dependencies  pfARGHIST  requirements.txt  rescomp.config.sh  setup.py  smc2  svn_ignore_these  trees2tksit.py  version
.circleci/: config.yml
.travis/: before_install.sh
2pop_experiment/: generate_heatmap.py  heat.sh
CEU_YRI/: README  choose1000Genomesamples.sh  knockout_homo_sites.sh
CEU_YRI_CHB/: CEU_CHROM1_inference.sh  CHB_CHROM1_inference.sh  YRI_CHROM1_inference.sh  choose1000Genomesamples.sh  knockout_homo_sites.sh  seperate_data_to_groups.sh
chr1_attempt2/: NA18526_CHROM1_inference.sh  choose_CNB_data.sh
cluster/: submit_me.sh  test1_pfARG
doc/source/: getting_started.rst  glossary.rst  index.rst  introduction.rst
docs/: README.md  bug-report.rst  citation.rst  conf.py  description.rst  example.rst  index.rst  input.rst  installation.rst  output.rst  requirements.txt  synopsis.rst
docs/_static/: segPlot.r
docs/args/: args.txt  em.txt  general.txt  inference.txt  inferred_args.txt  pop_args.txt
experiment2_many_repeats/: nodata_pfARG_singlepop.src  np10000_lag_noprune_random.sh  np10000_lag_prune_random.sh  np1000_lag_noprune_random.sh  np1000_lag_prune_random.sh  plot_hist.py  single_particle_many_repeats.sh  single_particle_many_repeats_fullprune.sh
infer_From_realdata_attempt/: Vcf.pm  choose_and_reduce_data.sh
migration_experiment1/: CEUCHB_priorNe_generate_data.sh  CEUCHB_priorNe_infer.sh  CEUCHB_priorNe_infer1000.sh  CEUCHB_priorNe_infer10000.sh  CEUCHB_priorNe_infer10000_alt.sh  CEUCHB_priorNe_infer1000_alt.sh  CEUCHB_priorNe_param.src  CEUYRI_priorNe_generate_data.sh  CEUYRI_priorNe_param.src  ms2something.py  testing.sh  write_CEUYRI_split_script.sh
newtests/: context.py  plot.R  populationmodels.py  run_tests.sh  simulate.py  test-2sample.py  test_2sample.py  test_4sample.py  test_bias_nodata.py  test_const_pop_size.py  test_generic.py  test_migration.py  test_singlePop.py  test_single_pop.py  test_two_pops.py
particle_vs_seqlen_4sample_small_grid_presents/: README  pipeline.sh  sim-1Samples4msdata1.seg  sim-1Samples4msdata1.vcf
performance/: cgatreport.ini  conf.py  contents.rst  readme.md
platypus_related/: README  extract_NA12815.sh  extract_NA12878.sh
plots/: constpopsize_auxpartfilt_experiment.R  model.R  plot-migration-ceuxxx.R  plot-simulations-singlepop.R  plot-singlepop.R  plot-themes.R  plot-utils.R  zigzag_inference_guiding.R
python/: create_samples.py  execute.py  findmigseg.py  populationmodels.py  process-recombination.py  processrecombination.py  smcsmc.py
recipe/: README.md  build.sh  build.yml  meta.yaml
simple_structures/: close2sample10000np.sh  close2sample1000np.sh  close2sample1000npPrior.sh  close4sample10000np.sh  close4sample50000np.sh  generate_data.sh  open2sample10000np.sh  open2sample1000np.sh  open2sample1000npPrior.sh  open4sample10000np.sh  open4sample50000np.sh  pop_struct.py  test14sample10000np.sh  test14sample50000np.sh  test1sample10000np.sh  test1sample1000np.sh  test1sample1000npPrior.sh  wakeleya2sample1000npPrior.sh  wakeleyb2sample1000npPrior.sh
smcsmc/: __init__.py  cli.py  create_samples.py  execute.py  findmigseg.py  generate_smcsmcinput.py  migseg.py  model.py  output.py  plot.py  popsim.py  populationmodels.py  processrecombination.py  simulations.py  square_model.py  trees.py  trees2tksit.py  trees2tskit.py  utils.py
src/: .gitignore  .gitsubmodules  Makefile.am  README  arena.cpp  arena.hpp  coalevent.cpp  coalevent.hpp  count-debug.cpp  count-semi-debug.cpp  count.cpp  count.hpp  count_extra.cpp  count_extra_omp.cpp  descendants.hpp  doxygen_notation.txt  draw_tmrca.r  eg_vcf.vcf  eg_vcf2.vcf  eventstate.hpp  exception.hpp  extendARG.cpp  extendARG_multi.cpp  extendARG_omp.cpp  general.hpp  help.cpp  help.hpp  model_summary.cpp  model_summary.hpp  multithread.cc  old_check_for_vcf  old_pattern.hpp  omp_print.cpp  particle-debug.cpp  particle.cpp  particle.hpp  particleContainer.cpp  particleContainer.hpp  particleContainer_extra.cpp  particleContainer_extra_omp.cpp  (+24 more)
src/debug/: count-debug.cpp  particle-debug.cpp  usage.cpp  usage.hpp  usage_ghost.cpp  variantReader-debug.cpp
src/not_used_src/: global.hpp  old_functions_in_particle.pp  old_update_VCF_byblock_17Jun13-pf-ARG.cpp  pf-ARG.hpp  resample.cpp  resample.hpp  testvcf.cpp  usage.cpp  useless-cpp-files.cpp  utility.cpp  utility.hpp  vcf_data.cpp  vcf_data.hpp
src/tests/: NA18501_CHROM1.vcf  pop_struct.py  test2sample.vcf  test_Coalevent.cpp  test_Count.cpp  test_FroestState.cpp  test_ParticleContainer.cpp  test_PfCount.cpp  test_Vcf.cpp  test_Vparticle.cpp  test_gvcf.cpp  test_param.cpp  test_pattern.cpp  test_variantReader.cpp  test_vcf.cpp
src/unittest/: .gitsubmodules  gvcf2rgvcf.py  test_binaries.sh  test_gvcf.cpp  test_param.cpp  test_random_generator.cpp  test_vcf.cpp
test/: test_cli.py  test_conversions.py  test_output.py  test_trees.py
tests/: .gitignore  Makefile.am  NA18501_CHROM1.vcf  check_smcsmcRECOMBOFF.sh  check_smcsmcSCRM_vs_scrm.sh  gvcf2rgvcf.py  pop_struct.py  test-coverage-local.sh  test_Coalevent.cpp  test_Count.cpp  test_FroestState.cpp  test_ParticleContainer.cpp  test_PfCount.cpp  test_Vcf.cpp  test_binaries.sh  test_binaries.src  test_binaries11_20.sh  test_binaries1_10.sh  test_binary_sample_size.sh  test_epoch_lag.sh  test_epoch_lag.src  test_migration.sh  test_migration.truth  test_param.cpp  test_pattern.cpp  test_runner.cpp
tests/data/exampleData/: example.InvalidSegmentStartPosition.seg  example.UndefinedCode.seg  example.WrongNumberOfEntry.seg  example.seg
tests/newtests/: context.py  test_generic.py  test_two_pops.py
tests/unittest/: test_Coalevent.cpp  test_Count.cpp  test_FroestState.cpp  test_ParticleContainer.cpp  test_PfCount.cpp  test_PfParam.cpp  test_Segment.cpp  test_TwoDoubles.cpp  test_param.cpp  test_pattern.cpp  test_runner.cpp
(+226 files in other folders)
